--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "GPA Calculator- Anna University",
+    "name": "GPA Calculator - Anna University (CEG/MIT)",
     "version": "1.0",
     "manifest_version": 2,
     "description": "Calculates your GPA by auto-fetching details from your marksheet!",
